--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,7 @@
             <a href="{{ site.baseurl }}/">Home</a>
             <a href="{{ site.baseurl }}/past-meetings">Meetings</a>
             <a href="{{ site.baseurl }}/officers">Officers</a>
+            <a href="{{ site.baseurl }}/officers">Officers</a>
             <a href="{{ site.baseurl }}/sponsors">Sponsors</a>
             <a href="http://eepurl.com/e7XmE" title="Subscribe to our email">Subscribe</a>
           </nav>
